@@ -15,6 +15,7 @@ enum _eSwitchType
     STYPE_BlindsInverted,
 	STYPE_Dimmer,
 	STYPE_Motion,
+	STYPE_Push,
 	STYPE_END
 };
 
