@@ -89,6 +89,9 @@ function RefreshFavorites()
 								if (item.SwitchType == "Doorbell") {
 									status+='<img src="images/door.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="16">';
 								}
+								else if (item.SwitchType == "Push Button") {
+									status+='<img src="images/push.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="16">';
+								}
 								else if (item.SwitchType == "X10 Siren") {
 									status+='<img src="images/siren.png" height="16">';
 								}
@@ -176,6 +179,9 @@ function RefreshFavorites()
 								var img="";
 								if (item.SwitchType == "Doorbell") {
 									img='<img src="images/door48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
+								}
+								else if (item.SwitchType == "Push Button") {
+									img='<img src="images/push48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40">';
 								}
 								else if (item.SwitchType == "X10 Siren") {
 									if (
@@ -890,6 +896,9 @@ function ShowFavorites()
 							if (item.SwitchType == "Doorbell") {
 								status+='<img src="images/door.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="16">';
 							}
+							else if (item.SwitchType == "Push Button") {
+								status+='<img src="images/push.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="16">';
+							}
 							else if (item.SwitchType == "X10 Siren") {
 								status+='<img src="images/siren.png" height="16">';
 							}
@@ -1001,6 +1010,9 @@ function ShowFavorites()
 									'\t      <td id="bigtext"></td>\n';
 							if (item.SwitchType == "Doorbell") {
 								xhtm+='\t      <td id="img"><img src="images/door48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
+							}
+							else if (item.SwitchType == "Push Button") {
+								xhtm+='\t      <td id="img"><img src="images/push48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',ShowFavorites);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="40"></td>\n';
 							}
 							else if (item.SwitchType == "X10 Siren") {
 								if (
