@@ -145,6 +145,8 @@ images/print.png
 images/print_hover.png
 images/program.png
 images/program_mini.png
+images/push.png
+images/push48.png
 images/rain.png
 images/rain48.png
 images/rainraining.png
