@@ -1088,6 +1088,9 @@ function RefreshLights()
 						else if (item.SwitchType == "Doorbell") {
 							img='<img src="images/door48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48">';
 						}
+						else if (item.SwitchType == "Push Button") {
+							img='<img src="images/push48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48">';
+						}
 						else if (item.SwitchType == "Contact") {
 							if (item.Status == 'Closed') {
 								img='<img src="images/contact48.png" height="48">';
@@ -1280,6 +1283,10 @@ function ShowLights()
           }
           else if (item.SwitchType == "Doorbell") {
             xhtm+='\t      <td id="img"><img src="images/door48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48"></td>\n';
+            bAddTimer=false;
+          }
+          else if (item.SwitchType == "Push Button") {
+            xhtm+='\t      <td id="img"><img src="images/push48.png" title="Turn On" onclick="SwitchLight(' + item.idx + ',\'On\',RefreshLights);" onmouseover="cursorhand()" onmouseout="cursordefault()" height="48"></td>\n';
             bAddTimer=false;
           }
           else if (item.SwitchType == "Contact") {
