@@ -19,6 +19,7 @@ Version 1.0.xxx (April xxth 2013)
 - Fixed: Sensor Timeout status update in web interface
 - Fixed: Rain (PCR800) rate/hour corrected
 - Implemented: Add support for Lighting6 (Blyss)
+- Implemented: Push Button switch type (only send an ON command)
 
 Version 1.0.412 (April 1th 2013)
 - Fixed: Siren icon on dashboard
